# minero

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  minero.cpp  minero.hpp  module.cpp  setup.py  test.py
include/: include.h  minero.h
include/sha256/: README.md  sha256.cpp  sha256.h
shells/: build.sh  build_whl.sh  install.sh  install_build_start.sh  start.sh
